Fixed spacing on TimesheetList

--- a/src/Components/TimesheetListView/TimesheetListView.css
+++ b/src/Components/TimesheetListView/TimesheetListView.css
@@ -1,5 +1,5 @@
 /* Styling for the timesheet containers */
-.linemanager-container {
+.list-container {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -10,14 +10,14 @@
   border-radius: 1.5rem;
   border: 0.2rem solid #c5ff00;
   margin-left: 10rem;
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 
 /* Styling for categories container */
 .categories-container {
   display: flex;
   flex-direction: row;
-  gap: 11rem;
+  gap: 10rem;
   align-items: center;
   justify-content: center;
   position: relative;
@@ -27,3 +27,7 @@
 }
 
 /* Styling for timesheets container */
+.timesheet-container {
+  max-height: 30rem;
+  overflow-y: auto;
+}
